--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <script src="chihacknight-intros-may-10-2016.js"></script>
-  <script src="colors.js"></script>
-  <script src="helpers.js"></script>
-  <script src="vendor.js"></script>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <script src="chihacknight-intros-may-10-2016.js"></script>
+    <script src="colors.js"></script>
+    <script src="helpers.js"></script>
+    <script src="vendor.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
   <body>
     <div id="title-area">
       <h1 id="title">
