ChiHackNight link via title, not event no.

--- a/204.html
+++ b/204.html
@@ -4,4 +4,5 @@ title: "Who is at Chi Hack Night?"
 event_number: "204"
 event_date: "may-10-2016"
 event_link: "https://chihacknight.org/events/2016/05/10/citizens-police-data-project.html"
+event_title: "Citizens Police Data Project"
 ---
