--- a/205.html
+++ b/205.html
@@ -4,4 +4,5 @@ title: "Who is at Chi Hack Night?"
 event_number: "205"
 event_date: "may-17-2016"
 event_link: "https://chihacknight.org/events/2016/05/17/open-hack-session.html"
+event_title: "Open Hack Session"
 ---
