--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ title: "Who is at Chi Hack Night?"
 event_number: "206"
 event_date: "may-24-2016"
 event_link: "https://chihacknight.org/events/2016/05/24/greater-good-studio.html"
+event_title: "Greater Good Studio"
 ---
