No quotes needed in the YAML front matter

--- a/205.html
+++ b/205.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "Who is at Chi Hack Night?"
-event_number: "205"
-event_date: "may-17-2016"
-event_link: "https://chihacknight.org/events/2016/05/17/open-hack-session.html"
-event_title: "Open Hack Session"
+title: Who is at Chi Hack Night?
+event_number: 205
+event_date: may-17-2016
+event_link: https://chihacknight.org/events/2016/05/17/open-hack-session.html
+event_title: Open Hack Session
 ---
