May 31 hack night

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Who is at Chi Hack Night?
-event_number: 206
-event_date: may-24-2016
-event_link: https://chihacknight.org/events/2016/05/24/greater-good-studio.html
-event_title: Greater Good Studio
+event_number: 207
+event_date: may-31-2016
+event_link: https://chihacknight.org/events/2016/05/31/lucy-parsons-labs.html
+event_title: Lucy Parsons Labs
 ---
